# DeckSummarizer

./: pyproject.toml
Main/: main.py  ui.py
Main/components/: sidebar.py
Main/core/: Analytics.py  PDF_Parser.py  WebScrapper.py  parsing.py  prompts.py  qa.py  summary.py
